# pterocli

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  release.yml
src/: client.rs  main.rs
